# proof-engine

./: .gitignore  CHAOS_RPG_API_CONTRACT.md  CONTRIBUTING.md  Cargo.toml  README.md  add_stubs.py  add_terrain_final.py  add_terrain_stubs.py  add_terrain_stubs2.py  append2.py  append3.py  append4.py  append_map_editor.py  append_map_impls.py  append_map_impls2.py  append_terrain_impls.py  build_out.txt  commit_msg.txt  fix_map2.py  fix_map_editor.py  fix_terrain.py  fix_terrain2.py  libmod.rlib  write_pse.py
benches/: glyph_bench.rs  particle_bench.rs
editor/: Cargo.toml
editor/src/: app.rs  asset_browser.rs  audio_mixer.rs  behavior_tree.rs  clipboard.rs  commands.rs  dialogue_graph.rs  editor_panels.rs  hotkeys.rs  inventory_system.rs  layout.rs  main.rs  material_system.rs  math_viz.rs  node_graph.rs  panels.rs  particle_editor.rs  physics_editor.rs  preferences.rs  profiler_panel.rs  project.rs  property_editor.rs  quest_system.rs  render_settings.rs  scene.rs  spline_editor.rs  timeline.rs  tools.rs  ui.rs  viewport.rs  world_gen.rs
editor/src/assets/: mod.rs
editor/src/widgets/: button.rs  color_picker.rs  common.rs  dialog.rs  dropdown.rs  mod.rs  scroll_area.rs  slider.rs  tabs.rs  text_input.rs  tree_node.rs
examples/: amorphous_entity.rs  apotheosis.rs  chaos_field.rs  colossus.rs  convergence.rs  force_fields.rs  full_combat.rs  galaxy.rs  heartbeat.rs  hello_glyph.rs  math_rain.rs  particle_demo.rs  particle_entity.rs  playground.rs  sculptor.rs  showcase.rs  strange_attractors.rs  supernova.rs
src/: integration.rs  lib.rs
src/ai/: blackboard.rs  flowfield.rs  goap.rs  mod.rs  navmesh.rs  pathfinding.rs  steering.rs  utility.rs
src/anim/: blend_tree.rs  clips.rs  mod.rs  skeleton.rs
src/animation/: ik.rs  mod.rs  sprite_anim.rs
src/asset/: handle.rs  hot_reload.rs  loader.rs  mod.rs  registry.rs  server.rs
src/audio/: effects.rs  math_source.rs  mixer.rs  mod.rs  music_engine.rs  output.rs  spatial.rs  synth.rs  synthesis.rs
src/behavior/: mod.rs  nodes.rs  planner.rs  tree.rs
src/character/: inventory.rs  mod.rs  quests.rs  skills.rs  stats.rs
src/combat/: abilities.rs  combo.rs  inventory.rs  mod.rs
src/compute/: buffer.rs  dispatch.rs  kernels.rs  mod.rs  sync.rs
src/config/: mod.rs
src/crafting/: economy.rs  market.rs  mod.rs  recipes.rs  workbench.rs
src/curves/: curve_anim.rs  curve_renderer.rs  dissolve.rs  entity_curves.rs  mod.rs  templates.rs  tessellate.rs
src/debug/: console.rs  graph.rs  inspector.rs  metrics.rs  mod.rs  overlay.rs  profiler.rs
src/deferred/: antialiasing.rs  gbuffer.rs  materials.rs  mod.rs  pipeline.rs
src/dialogue/: mod.rs  runner.rs  tree.rs
src/dsp/: analysis.rs  fft.rs  filters.rs  mod.rs
src/ecology/: disease.rs  evolution.rs  food_web.rs  migration.rs  mod.rs  population.rs
src/economy/: factions.rs  market.rs  mod.rs  production.rs
src/ecs/: commands.rs  entity.rs  events.rs  mod.rs  query.rs  schedule.rs  storage.rs  world.rs
src/editor/: ability_editor.rs  ai_behavior_editor.rs  all_final_content.txt  anim_retarget.rs  animation_compression.rs  animation_state_machine.rs  asset_browser.rs  audio_editor.rs  audio_mixer_editor.rs  bone_rigger.rs  build_system.rs  camera_controller.rs  cinematic_editor.rs  cinematic_sequencer.rs  color_grading.rs  console.rs  curve_editor.rs  cutscene_append2_content.txt  cutscene_append3_content.txt  cutscene_append4_content.txt  cutscene_append_content.txt  cutscene_final_boost.txt  cutscene_importer.rs  dialogue_editor.rs  event_editor.rs  final_boost_content.txt  font_editor.rs  gizmos.rs  gpu_profiler.rs  hierarchy.rs  input_editor.rs  inspector.rs  inventory_editor.rs  kit_panel.rs  level_streaming_editor.rs  light_probe.rs  localization.rs  lod_manager.rs  loot_editor.rs  loot_ext_final.rs  (+72 more)
src/effects/: field_viz.rs  mod.rs
src/electromagnetic/: antenna.rs  charged_particles.rs  electric.rs  faraday.rs  fdtd.rs  lightning.rs  magnetic.rs  mod.rs  plasma.rs  waves.rs
(+405 files in other folders)
