[package]
name = "proof-editor"
version = "0.1.0"
edition = "2021"
description = "Visual editor and staging environment for Proof Engine"

[[bin]]
name = "proof-editor"
path = "src/main.rs"

[dependencies]
proof-engine = { path = ".." }
glam = { version = "0.25", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
